_generated-doc/2.7/config/quarkus-bootstrap-bootstrap-config.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-bootstrap-bootstrap-config_configuration]]link:#quarkus-bootstrap-bootstrap-config_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-bootstrap-bootstrap-config_quarkus.bootstrap.effective-model-builder]]`link:#quarkus-bootstrap-bootstrap-config_quarkus.bootstrap.effective-model-builder[quarkus.bootstrap.effective-model-builder]`

[.description]
--
If set to true, the workspace initialization will be based on the effective POMs (i.e. properly interpolated, including support for profiles, etc) instead of the raw ones.
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-bootstrap-bootstrap-config_quarkus.bootstrap.misaligned-platform-imports]]`link:#quarkus-bootstrap-bootstrap-config_quarkus.bootstrap.misaligned-platform-imports[quarkus.bootstrap.misaligned-platform-imports]`

[.description]
--
Whether to throw an error, warn or silently ignore misaligned platform BOM imports
--|`error`, `warn`, `ignore` 
|`error`

|===